--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x250/300x250_frame2.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x250/300x250_frame2.html
@@ -128,8 +128,8 @@ amo.registerAttribute("frameText1","TEXT","Students love<br><div class='coloredT
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 34px;left: 22px;font-size: 26px;line-height:1.1;'>Get 1 Gig Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top:87px;left:23px;'><div class='bulletedText'>Unlimited data</div><div class='bulletedText'>$50 Amazon.com gift card<div class='AlticeRegular' style='font-size: 10px;line-height:1;margin-top: 2px;'>Restrictions apply.</div></div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div style='top: 135px;left: 23px;'><div class='bulletedText'>Free Installation for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 25px;left: 22px;font-size: 19.4px;line-height: 1.05;'><div style='color: #0084d6;height:20px;margin-top:-20px;font-size:77%;'>(urgencyMessage)</div>Internet<br>as low as</div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 63px;left: 18px;width: 160px;line-height: 1;'><font style='font-size: 65px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 8px;font-size: 11px;display: inline-block;vertical-align: 25px;'>/mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 3px 0 0 5px;font-size: 10px;'>w/Auto Pay &amp; Paperless Bill<br>Plus taxes, fees & charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 25px;left: 22px;font-size: 19.4px;line-height: 1.05;'>Internet<br>as low as</div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 63px;left: 18px;width: 160px;line-height: 1;'><font style='font-size: 65px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 6px;font-size: 11px;display: inline-block;vertical-align: 35px;'>/mo.</font><div class='AlticeRegular' style='margin: 3px 0 0 5px;font-size: 10px;line-height: 1.1;'>w/Auto Pay &amp; Paperless Bill<br>Plus taxes, fees &amp; charges</div></div>");
 amo.registerAttribute("frameText33","TEXT","&nbsp;");
 </script>
 <!-- End of overrode asset attributes values -->
@@ -228,9 +228,7 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
         },
         beforeLoad: function(data){
           data.map(function(content){
-            var daysLeft = Math.ceil((new Date('5 July 2020') - new Date())/(24*60*60*1000));
-            var urgencyMessage =  daysLeft > 0 ? daysLeft + ' Day' + (daysLeft == 1 ? '' : 's') + ' Left!' : '';
-            for(var i in content) { if(content[i].indexOf('(urgencyMessage)') > 0) { content[i] = content[i].split('(urgencyMessage)').join(urgencyMessage); } }
+            
           });
           return data;
         }
@@ -289,7 +287,7 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
           var frameId = 3;
           // ad.layers.cta.classList.remove('ctaWhite')
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[3]})
           // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.7, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
