--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x50/300x50_frame2.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x50/300x50_frame2.html
@@ -102,17 +102,16 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Shop now");
+amo.registerAttribute("frameImage1", "IMAGE", "300x50_SDL_B2U_GIG_20_OMG_Img_Frame_1.png");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Stay connected on<br>your <font class='coloredText'>work day</font>");
-amo.registerAttribute("frameText12","TEXT","and <font class='coloredText'>school day</font>");
-amo.registerAttribute("frameText21","TEXT","<div style='top:11px;left:9px;'><div class='bulletedText'>Up to 400 Mbps Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top:28px;left:9px;'><div class='bulletedText'>Unlimited data</div></div>");
+amo.registerAttribute("frameText1","TEXT","Students love<br><div class='coloredText'>One Mighty Gig</div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 9px;left: 10px;font-size: 16.7px;line-height: 1.05;'>Internet speeds<br>up to 1 Gig</div>");
+amo.registerAttribute("frameText22","TEXT","&nbsp;");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31", "TEXT", "<div style='top:3px;left:8px;font-size:14px;'>400 Mbps Internet</div>");
-amo.registerAttribute("frameText32", "TEXT", "<div style='top:18px;left:8px;font-size:13.5px;'><font style='color:#0084d6;'>$29.99</font> mo./1 yr.</div>");
-amo.registerAttribute("frameText33", "TEXT", "<div style='top:35px;left:8px;font-size:10px;' class='AlticeRegular'>Plus taxes, fees & charges</div>");
-amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
+amo.registerAttribute("frameText31", "TEXT", "<div style='top:0px;left:10px;font-size:16.8px;'>Internet as low as</div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top: 20px;left: 8px;width: 220px;line-height: 1;'><font style='font-size: 31px;' class='coloredText'>$20</font><font style='margin-left: 1px;font-size: 9px;display: inline-block;vertical-align: 14px;'>/mo.</font><div class='AlticeRegular' style='margin: -27px 0 0 82px;font-size: 9px;'>w/Auto Pay &amp; Paperless Bill<br>Plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -140,7 +139,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
       style="top: 5px;
-        right: 15px;
+        right: 10px;
         width: 65px;
         height: 14px;
         font-size: 10.5px;
@@ -157,21 +156,13 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
       background-color:#f5f4f7;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
+      <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
       <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
         style="top: 2px;
-          left: 10px;
+          left: 9px;
           width: 240px;
           height: 46px;
-          font-size: 16px;
-          line-height: 1;">
-      </div>
-      <div id="frameText12" class="text-left AlticeBold"
-        data-text="frameText12"
-        style="top: 5px;
-          left: 8px;
-          width: 200px;
-          height: 40px;
           font-size: 17px;
           line-height: 1;">
       </div>
@@ -179,7 +170,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
         style="top: 5px;
-          right: 15px;
+          right: 10px;
           width: 65px;
           height: 14px;
           font-size: 10.5px;
@@ -227,7 +218,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
 
-        gsap.set('#frameText1,#frameText12', {autoAlpha:0});
+        gsap.set('#frameImage1,#frameImage12,#frameText1', {autoAlpha:0});
         gsap.set('.frameImage', {x:'-100%'});
         gsap.set('.frameText', {y:'100%'});
         gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
@@ -269,15 +260,15 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
         var animateFrame2 = function(flag){
           var frameId = 2;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
           gsap.set('#frameText1', {x: '0'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage1', {autoAlpha:1,duration:0})
+          .to('#frameImage1', {autoAlpha:0,delay:2})
           .to('#frameText1', {autoAlpha:1})
-          .to('#frameText1', {autoAlpha:0,delay:1.5})
-          .to('#frameText12', {autoAlpha:1})
           .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
