--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x600/300x600_frame3.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x600/300x600_frame3.html
@@ -76,17 +76,17 @@
       }
       .bulletedText {
         position: relative;
-        padding-left: 24px;
-        font-size: 26px;
-        line-height: 1.05;
+        padding-left: 14px;
+        font-size: 15.8px;
+        line-height: 0.95;
         margin-bottom: 6px;
       }
       .bulletedText::before {
         content: '+';
         position: absolute;
-        top: -2px;
+        top: 0px;
         left: 0px;
-        font-size: 26px;
+        font-size: 16px;
         color: #0084d6;
       }
       #cta::before, #introCta::before {
@@ -110,22 +110,18 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
 amo.registerAttribute("ctaText","TEXT","Shop now");
-amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_1P_39_1yr_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_1P_39_1yr_Frame05.png");
-amo.registerAttribute("frameText1","TEXT","Stay<br>connected<br>on your<br>work day");
-amo.registerAttribute("frameText12","TEXT","and<br>school<br>day");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 115px;left: 33px;font-size: 28px;line-height:1.1;color: #fff;'>400 Mbps<br>Internet</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 172px;left: 24px;width: 260px;color: #fff;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;'>$29</font><font style='margin-left: 7px;font-size: 19px;display: inline-block;vertical-align: 29px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 2px 0 0 10px;font-size: 14px;'>Plus taxes, fees<br>& charges</div></div>");
-amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:88px;left:18px;'><div class='bulletedText'>400 Mbps Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:121px;left:18px;'><div class='bulletedText'>Unlimited data</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:154px;left:18px;'><div class='bulletedText'>Contract buyout<br>up to $100</div></div><div class='AlticeRegular' style='top: 477px;left: 18px;font-size: 14px;line-height: 1.1;'>Wired connection<br>up to 400 Mbps.</div>");
-amo.registerAttribute("frameText41", "TEXT", "<div style='top: 88px;left: 24px;font-size: 28px;line-height:1;'><div style='color: #0084d6;height:36px;font-size:77%;'>(urgencyMessage)</div>400 Mbps<br>Internet</div>");
-amo.registerAttribute("frameText42", "TEXT", "<div style='top: 176px;left: 17px;width: 260px;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;' class='coloredText'>$29</font><font style='margin-left: 7px;font-size: 19px;display: inline-block;vertical-align: 29px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 2px 0 0 8px;font-size: 14px;'>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;transform: scale(0.655);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
+amo.registerAttribute("frameImage1", "TEXT", "300x600_SDL_B2U_GIG_20_OMG_Img_Frame_1.png");
+amo.registerAttribute("frameImage12", "TEXT", "300x600_SDL_B2U_GIG_20_OMG_Img_Frame_2.png");
+amo.registerAttribute("frameImage2","IMAGE","1x1.png");
+amo.registerAttribute("frameImage3","IMAGE","300x600_SDL_B2U_GIG_20_OMG_Img_Frame_5.png");
+amo.registerAttribute("frameText1","TEXT","Students love<br><div class='coloredText'>One Mighty Gig</div>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 49px;left: 23px;font-size: 34px;line-height: 1.05;'>Get 1 Gig Internet</div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top:146px;left:23px;'><div class='bulletedText'>Unlimited data</div><div class='bulletedText'>$50 Amazon.com gift card<div class='AlticeRegular' style='font-size: 10px;line-height:1;margin-top: 2px;'>Restrictions apply.</div></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 198px;left: 23px;'><div class='bulletedText'>Free Installation for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 50px;left: 23px;font-size: 31px;line-height: 1.05;'>Internet<br>as low as</div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 113px;left: 20px;width: 240px;line-height: 1;'><font style='font-size: 102px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 5px;font-size: 17px;display: inline-block;vertical-align: 59px;'>/mo.</font><div class='AlticeRegular' style='margin: 0px 0 0 3px;font-size: 12.3px;line-height: 1.1;'>w/Auto Pay &amp; Paperless Bill<br>Plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText33","TEXT","&nbsp;");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -151,16 +147,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;
     <div id="frameText31" class="frameText">!{frameText31}</div>
     <div id="frameText32" class="frameText">!{frameText32}</div>
     <div id="frameText33" class="frameText">!{frameText33}</div>
-    <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div>
-    <div id="frameText41" class="frameText">!{frameText41}</div>
-    <div id="frameText42" class="frameText">!{frameText42}</div>
-    <div id="frameText43" class="frameText">!{frameText43}</div>
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 540px;
-        left: 16px;
-        width: 99px;
+      style="top: 549px;
+        left: 24px;
+        width: 88px;
         height: 22px;
         font-size: 15px;
         overflow: hidden;
@@ -175,33 +167,23 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;
       background-color:#f5f4f7;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top: 43px;left: 38px;width: 220px;height: 220px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text AlticeBold"
+      <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
+      <div id="frameImage12" class="asset adSizeContainer" data-image="frameImage12"></div>
+      <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
-        data-style="text-align:center;"
-        style="top: 237px;
-          left: 15px;
-          width: 260px;
-          height: 180px;
-          font-size: 36px;
-          line-height: 1;">
-      </div>
-      <div id="frameText12" class="text AlticeBold"
-        data-text="frameText12"
-        data-style="text-align:center;"
-        style="top: 244px;
-          left: 15px;
-          width: 260px;
-          height: 130px;
-          font-size: 36px;
-          line-height: 1;">
+        style="top: 119px;
+          left: 25px;
+          width: 263px;
+          height: 240px;
+          font-size: 35px;
+          line-height: 1.1;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 540px;
-          left: 16px;
-          width: 99px;
+        style="top: 549px;
+          left: 24px;
+          width: 88px;
           height: 22px;
           font-size: 15px;
           overflow: hidden;
@@ -237,9 +219,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;
         },
         beforeLoad: function(data){
           data.map(function(content){
-            var daysLeft = Math.ceil((new Date('5 July 2020') - new Date())/(24*60*60*1000));
-            var urgencyMessage =  daysLeft > 0 ? daysLeft + ' Day' + (daysLeft == 1 ? '' : 's') + ' Left!' : '';
-            for(var i in content) { if(content[i].indexOf('(urgencyMessage)') > 0) { content[i] = content[i].split('(urgencyMessage)').join(urgencyMessage); } }
+
           });
           return data;
         }
@@ -248,10 +228,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
-
         textUpdate();
-        gsap.set('#frameText1,#frameText12', {autoAlpha:0});
+        gsap.set('#frameImage1,#frameImage12,#frameText1', {autoAlpha:0});
         gsap.set('.frameImage', {x:'100%'});
         gsap.set('.frameText, #priceLabel', {x:'-100%'});
         var priceFrameAnimation = function(frame){
@@ -299,8 +277,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;
         var animateFrame3 = function(flag){
           var frameId = 3;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.7, opacity:0, onComplete: animateFrame4}));
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[3]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.7, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
@@ -309,16 +287,13 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 324px;left: 24px;
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.3, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:2})
-            .to('#frameText12', {autoAlpha:1})
-          }
-          ad.layers.frameVideo1.querySelector('video').onended = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
-          }
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage1', {autoAlpha:1,duration:0})
+          .to('#frameImage1', {autoAlpha:0,duration:0,delay:1.5})
+          .to('#frameImage12', {autoAlpha:1,duration:0})
+          .to('#frameImage12', {autoAlpha:0,delay:1.5})
+          .to('#frameText1', {autoAlpha:1})
+          .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
                     gsap.delayedCall(1.2, animateFrame3, [true]);
