--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/728x90/728x90_frame1.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/728x90/728x90_frame1.html
@@ -76,17 +76,17 @@
       }
       .bulletedText {
         position: relative;
-        padding-left: 19px;
-        font-size: 21px;
+        padding-left: 12px;
+        font-size: 12.7px;
         line-height: 0.95;
         margin-bottom: 5px;
       }
       .bulletedText::before {
         content: '+';
         position: absolute;
-        top: -2px;
+        top: 0px;
         left: 0px;
-        font-size: 20px;
+        font-size: 12px;
         color: #0084d6;
       }
       #cta::before, #introCta::before {
@@ -110,22 +110,18 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
 amo.registerAttribute("ctaText","TEXT","Shop now");
-amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_1P_39_1yr_Frame02.png");
-amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Stay connected<br>on your work day");
-amo.registerAttribute("frameText12","TEXT","and school day");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 14px;left: 23px;font-size: 26px;line-height: 0.9;'>400 Mbps<br>Internet</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 3px;left: 158px;width: 250px;line-height: 1;'><font style='font-size: 84px;' class='coloredText'>$29</font><font style='margin-left: 6px;font-size: 13px;display: inline-block;vertical-align: 19px;line-height: 1.2;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='position: absolute;top: 61px;left: 151px;font-size: 10.8px;'>Plus taxes, fees<br>&amp; charges</div></div>");
-amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:13px;left:22px;'><div class='bulletedText'>400 Mbps Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:37px;left:22px;'><div class='bulletedText'>Unlimited data</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:61px;left:22px;'><div class='bulletedText'>Contract buyout up to $100</div></div><div class='AlticeRegular' style='top: 56px;left: 420px;font-size: 12px;line-height: 1;'>Wired connection<br>up to 400 Mbps.</div>");
-amo.registerAttribute("frameText41", "TEXT", "<div style='top: 14px;left: 23px;font-size: 26px;line-height: 0.9;'><div style='color: #0084d6;height: 20px;font-size: 62%;'>(urgencyMessage)</div>400 Mbps<br>Internet</div>");
-amo.registerAttribute("frameText42", "TEXT", "<div style='top: 3px;left: 158px;width: 250px;line-height: 1;'><font style='font-size: 84px;' class='coloredText'>$29</font><font style='margin-left: 6px;font-size: 13px;display: inline-block;vertical-align: 19px;line-height: 1.2;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='position: absolute;top: 61px;left: 151px;font-size: 10.8px;'>Plus taxes, fees<br>&amp; charges</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;transform: scale(0.77);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
+amo.registerAttribute("frameImage1", "TEXT", "728x90_SDL_B2U_GIG_20_OMG_Img_Frame_1.png");
+amo.registerAttribute("frameImage12", "TEXT", "728x90_SDL_B2U_GIG_20_OMG_Img_Frame_2.png");
+amo.registerAttribute("frameImage2","IMAGE","1x1.png");
+amo.registerAttribute("frameImage3","IMAGE","728x90_SDL_B2U_GIG_20_OMG_Img_Frame_5.png");
+amo.registerAttribute("frameText1","TEXT","Students love <font class='coloredText'>One Mighty Gig</font>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 30px;left: 20px;font-size: 25.8px;line-height:1.1;'>Get 1 Gig Internet</div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 9px;left: 356px;'><div class='bulletedText'>Unlimited data</div><div class='bulletedText'>$50 Amazon.com gift card<div class='AlticeRegular' style='font-size: 8px;line-height:1;margin-top: 2px;'>Restrictions apply.</div></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 52px;left: 356px;'><div class='bulletedText'>Free Installation for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 7px;left: 20px;font-size: 25px;line-height: 1.05;'>Internet<br>as low as</div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 3px;left: 147px;width: 300px;line-height: 1;'><font style='font-size: 86px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 5px;font-size: 14.5px;display: inline-block;vertical-align: 50px;'>/mo.</font><div class='AlticeRegular' style='margin: -36px 0 0 151px;font-size: 10px;line-height: 1.1;'>w/Auto Pay & Paperless Bill<br>Plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText33","TEXT","&nbsp;");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -151,15 +147,11 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;
     <div id="frameText31" class="frameText">!{frameText31}</div>
     <div id="frameText32" class="frameText">!{frameText32}</div>
     <div id="frameText33" class="frameText">!{frameText33}</div>
-    <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div>
-    <div id="frameText41" class="frameText">!{frameText41}</div>
-    <div id="frameText42" class="frameText">!{frameText42}</div>
-    <div id="frameText43" class="frameText">!{frameText43}</div>
     <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 13px;
-    left: 583px;
+      style="top: 11px;
+        left: 599px;
         width: 106px;
         height: 25px;
         font-size: 16px;
@@ -175,30 +167,22 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;
       background-color:#f5f4f7;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top: -15px;left: 423px;width: 110px;height: 100px;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
+      <div id="frameImage12" class="asset adSizeContainer" data-image="frameImage12"></div>
       <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
-        style="top: 6px;
-          left: 26px;
-          width: 400px;
+        style="top: 4px;
+          left: 20px;
+          width: 500px;
           height: 80px;
-          font-size: 36px;
-          line-height: 1;">
-      </div>
-      <div id="frameText12" class="text-left AlticeBold"
-        data-text="frameText12"
-        style="top: 3px;
-          left: 26px;
-          width: 400px;
-          height: 80px;
-          font-size: 36px;
+          font-size: 26px;
           line-height: 1;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 13px;
-          left: 583px;
+        style="top: 11px;
+          left: 599px;
           width: 106px;
           height: 25px;
           font-size: 16px;
@@ -235,9 +219,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;
         },
         beforeLoad: function(data){
           data.map(function(content){
-            var daysLeft = Math.ceil((new Date('5 July 2020') - new Date())/(24*60*60*1000));
-            var urgencyMessage =  daysLeft > 0 ? daysLeft + ' Day' + (daysLeft == 1 ? '' : 's') + ' Left!' : '';
-            for(var i in content) { if(content[i].indexOf('(urgencyMessage)') > 0) { content[i] = content[i].split('(urgencyMessage)').join(urgencyMessage); } }
+
           });
           return data;
         }
@@ -246,10 +228,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
-
         textUpdate();
-        gsap.set('#frameText1,#frameText12', {autoAlpha:0});
+        gsap.set('#frameImage1,#frameImage12,#frameText1', {autoAlpha:0});
         gsap.set('.frameImage', {y:'100%'});
         gsap.set('.frameText', {y:'100%'});
         gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
@@ -290,8 +270,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;
         var animateFrame3 = function(flag){
           var frameId = 3;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.7, opacity:0, onComplete: animateFrame4}));
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[3]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.7, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
@@ -300,17 +280,14 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 11px;left: 376px;
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.3, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.set('#frameText1', {x: '0'});
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:2})
-            .to('#frameText12', {autoAlpha:1})
-          }
-          ad.layers.frameVideo1.querySelector('video').onended = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
-          }
+          gsap.set('#frameText1', {x: '0'});
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage1', {autoAlpha:1,duration:0})
+          .to('#frameImage1', {autoAlpha:0,duration:0,delay:1.5})
+          .to('#frameImage12', {autoAlpha:1,duration:0})
+          .to('#frameImage12', {autoAlpha:0,delay:1.5})
+          .to('#frameText1', {autoAlpha:1})
+          .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         gsap.delayedCall(.8, animateFrame1, [true]);
       });
